# Projects

./: README.md
MLOPS/: .gitignore  README.md
MLOPS/yolo-deployment/: .gitignore  README.md  main.py  pyproject.toml
RAG/: .gitignore  README.md
RAG/Dev/: main.py  pyproject.toml  requirements.txt
RAG/TRAG/: README.md  main.py  pyproject.toml  requirements.txt
RAG/TRAG/notebook/: document.ipynb  pdfloader.ipynb
