[project]
name = "yolo-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "cvlib>=0.2.7",
    "fastapi>=0.136.3",
    "nest-asyncio>=1.6.0",
    "numpy<2",
    "opencv-python==4.6.0.66",
    "python-multipart>=0.0.32",
    "setuptools<82",
    "tensorflow>=2.21.0",
    "ultralytics>=8.4.60",
    "uvicorn>=0.49.0",
]
